# slicer_ros2_module

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Compilation.md  LICENSE  README.md  ReadME.md  SlicerROS2Config.h.in  SlicerROS2Notes.md  do-release.py  local_setup.bash  package.xml  patch.txt  qSlicerROS2Module.cxx  qSlicerROS2Module.h  qSlicerROS2ModuleWidget.cxx  qSlicerROS2ModuleWidget.h  qSlicerRos2Module.cxx  qSlicerRos2Module.h  qSlicerRos2ModuleWidget.cxx  qSlicerRos2ModuleWidget.h  qSlicerSlicerRos2Module.cxx  qSlicerSlicerRos2Module.h  qSlicerSlicerRos2ModuleWidget.cxx  qSlicerSlicerRos2ModuleWidget.h  release.md  slicer_ros2_module_test.py  slicer_startup_script.py
Logic/: CMakeLists.txt  vtkMRMLROS2NODENode.h  vtkMRMLROS2NodeNode.cxx  vtkMRMLROS2NodeNode.h  vtkMRMLROS2PublisherInternals.h  vtkMRMLROS2PublisherNativeInternals.h  vtkMRMLROS2PublisherNativeNode.cxx  vtkMRMLROS2PublisherNativeNode.h  vtkMRMLROS2PublisherNode.cxx  vtkMRMLROS2PublisherNode.h  vtkMRMLROS2PublisherVTKInternals.h  vtkMRMLROS2PublisherVTKNode.cxx  vtkMRMLROS2PublisherVTKNode.h  vtkMRMLROS2SubscriberImplementation.h  vtkMRMLROS2SubscriberInstantiation.h  vtkMRMLROS2SubscriberInstantiations.cxx  vtkMRMLROS2SubscriberInstantiations.h  vtkMRMLROS2SubscriberInternals.h  vtkMRMLROS2SubscriberNativeInternals.h  vtkMRMLROS2SubscriberNativeNode.cxx  vtkMRMLROS2SubscriberNativeNode.h  vtkMRMLROS2SubscriberNode.cxx  vtkMRMLROS2SubscriberNode.h  vtkMRMLROS2SubscriberVTKInternals.h  vtkMRMLROS2SubscriberVTKNode.cxx  vtkMRMLROS2SubscriberVTKNode.h  vtkROS2ToSlicer.cxx  vtkROS2ToSlicer.h  vtkSlicerROS2Logic.cxx  vtkSlicerROS2Logic.h  vtkSlicerRos2Logic.cxx  vtkSlicerRos2Logic.h  vtkSlicerSlicerRos2Logic.cxx  vtkSlicerSlicerRos2Logic.h  vtkSlicerToROS2.cxx  vtkSlicerToROS2.h
MRML/: CMakeLists.txt  ROS2MessageMacro.cmake  ROS2_to_vtkObjects.py  SlicerROS2.cmake  vtkCustomTypes.cxx  vtkCustomTypes.h  vtkMRMLROS2CISST.cxx  vtkMRMLROS2CISST.h  vtkMRMLROS2NODENode.cxx  vtkMRMLROS2NODENode.h  vtkMRMLROS2NodeInternals.h  vtkMRMLROS2NodeNode.cxx  vtkMRMLROS2NodeNode.h  vtkMRMLROS2ParameterInternals.h  vtkMRMLROS2ParameterNativeInternals.h  vtkMRMLROS2ParameterNativeMacros.h  vtkMRMLROS2ParameterNativeNode.cxx  vtkMRMLROS2ParameterNativeNode.h  vtkMRMLROS2ParameterNode.cxx  vtkMRMLROS2ParameterNode.h  vtkMRMLROS2PublisherDefaultNodes.cxx  vtkMRMLROS2PublisherDefaultNodes.h  vtkMRMLROS2PublisherInternals.h  vtkMRMLROS2PublisherMacros.h  vtkMRMLROS2PublisherNativeInternals.h  vtkMRMLROS2PublisherNativeMacros.h  vtkMRMLROS2PublisherNativeNode.cxx  vtkMRMLROS2PublisherNativeNode.h  vtkMRMLROS2PublisherNode.cxx  vtkMRMLROS2PublisherNode.h  vtkMRMLROS2PublisherVTKInternals.h  vtkMRMLROS2PublisherVTKMacros.h  vtkMRMLROS2PublisherVTKNode.cxx  vtkMRMLROS2PublisherVTKNode.h  vtkMRMLROS2RobotNode.cxx  vtkMRMLROS2RobotNode.h  vtkMRMLROS2RobotNodeInternals.h  vtkMRMLROS2ServiceClientDefaultNodes.cxx  vtkMRMLROS2ServiceClientDefaultNodes.h  vtkMRMLROS2ServiceClientInternals.h  (+37 more)
MRML/CodeGeneration/: ROS2_to_vtkObjects.py  configForCodegen.py  utils.py
Resources/: qSlicerROS2Module.qrc  qSlicerSlicerRos2Module.qrc
Resources/UI/: qSlicerROS2ModuleWidget.ui  qSlicerROS2RobotWidget.ui  qSlicerRos2ModuleWidget.ui  qSlicerSlicerRos2FooBarWidget.ui  qSlicerSlicerRos2ModuleWidget.ui
StereoModule/: DemoModule.py  StereoControlModule.py
StereoModule/Resources/UI/: StereoControlModule.ui
StereoModule/lib/: utils.py
Testing/Python/: CMakeLists.txt  ROS2Tests.py  SlicerROS2Tests.py
Widgets/: qSlicerSlicerRos2FooBarWidget.cxx  qSlicerSlicerRos2FooBarWidget.h
docs/: compilation.md  conf.py  index.rst  requirements.txt
docs/images/: connolly2022.bib  connolly2024.bib
docs/pages/: example-cases.rst  features.rst  getting-started.rst  limitations.rst  links.rst  mrml-ros-nodes.rst  nodes.rst  python_features.rst  robot-visualization.rst  tests.rst  usage.rst
docs/pages/nodes/: design.rst  nodes.rst  parameters.rst  robots.rst  services.rst  tf2.rst  topics.rst
models/meshes/: Base.stl
models/urdf/: omni.urdf
vr_testing_scripts/: TumorModel.vtk  layout_better.py  layout_custom.py  release_mtm_hold.py
